# sxlijin.github.io

./: .eleventy.js  .gitignore  .rustfmt.toml  Cargo.toml  Gemfile  README.md  _config.yml  askama.toml  blog.html  bookshelf.md  build.sh  histogram.html  html-fallback.js  index.html  index.md  manifest.json  package.json  post.lua  reading.md  readme.md  resume.html  resume.md  rust-toolchain.toml  sw.js  test.md  website.css  website.scss  writer.lua
.github/: renovate.json5
.github/workflows/: build.yaml
_includes/: footer.html  google-analytics.html  head.html  header.html  profile.md
_layouts/: Base.njk  Post.njk  bare-bones.html  base.html.j2  compress.html  default.html  post.html
_layouts2/: base.html.j2  post.html.j2
_posts/: 2017-04-18-computer-ethics.md  2017-06-01-was-my-degree-worth-it.md  2023-08-03-typescript-and-protos.md  2023-10-07-protocol-buffers-grpc-and-js-ts-a-rant.md
_sass/: typography.scss
assets/: hot-reload.js  mathjax.js
css/: index.scss  main.scss  resume.scss  website.scss
drafts/: blog post queue.md
lib/: blog.md  index.lua  metadata.yaml  post.lua  template.html
pages/: index.md  interview-questions.md  library.md  recipes.md  resume.md
posts/: 2017-06-01-was-my-degree-worth-it.md  2023-10-07-protocol-buffers-grpc-and-js-ts-a-rant.md  2023-12-09-powered-by-pandoc.md  2023-12-10-some-notes-on-llms.md  2024-02-11-from-big-tech-to-startup.md  2024-02-13-notes-on-ddia.md  2024-02-18-joining-boundary.md  2024-08-22-why-rust.md  2024-10-09-node-stdout-disappearing-bytes.md  2025-03-23-next-js-and-coordinated-disclosure.md  2025-03-24-why-rust.md  2025-06-24-on-using-llms-phrasing-matters.md  2025-06-25-rust-case-studies.md  2025-09-03-shipping-rust-to-non-rust-users.md  2025-11-27-id-formats.md  2025-11-27-llms-dont-understand-numbers.md  2025-11-27-things-that-i-want-to-want-to-do.md  2025-11-27-threat-model-framing.md  2025-12-05-zig-case-studies.md  draft-2025-05-19-on-llm-coding.md  draft-2025-06-26-on-using-llms-ai-brain-rot.md  draft-2025-07-03-why-rust.md  draft-2025-10-29-hangboard design notes.md  draft-2025-12-30-making-technology-accessible.md
scss/: base.scss  index.scss  main.scss  resume.scss  typography.scss
src/: axum_server.rs  build_content.rs  cli.rs  hot_reload.rs  hyper_server2.rs  lib.rs  main.rs  misc.rs  websocket_handler.rs
src/build_website/: collections.rs  markdown_render_engine.rs  mod.rs
